fix: Add z-index to the search result

--- a/asset/css/search.css
+++ b/asset/css/search.css
@@ -2,22 +2,33 @@
   left: 0 !important;
 }
 
-.ac__inner{
+.ac__container {
+  z-index: 1;
+}
+
+.ac__inner {
   background: #f6f6f6;
 }
 
 /* Individual word element */
-.ac__word{
-  margin: 0;
+.ac__word {
+  margin: 2px;
   padding: 5px;
+  border-top: 1px solid #e1e1e1;
+}
+
+.ac__word:first-child{
+  border-top: none;
+  margin-top: 5px !important;
 }
 
 /* Word prefix style. It’s the span containing the search keyword within the word. */
-.ac__prefix{
+.ac__prefix {
   font-weight: bold;
 }
 
 /* Style applied to each words while navigating through the list or on hover */
-.ac__word--selected, .ac__word:hover{
+.ac__word--selected,
+.ac__word:hover {
   background-color: #e3e3e3;
 }
